--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
        		<ul id="nav-ul">
         		<li><a style="font-family:wfont_643d94_dd28b3957391427eb54de1c9eff7cfb1,wf_dd28b3957391427eb54de1c9e,orig_tbc_x_regular;" href="#">მთავარი</a></li>
         		<li><a style="font-family:wfont_643d94_dd28b3957391427eb54de1c9eff7cfb1,wf_dd28b3957391427eb54de1c9e,orig_tbc_x_regular;" href="#">TBC ID</a></li>
-          		<li><a href="index.html">TBCxUSAID</a></li>
+          		<li><a style="font-family:wfont_643d94_dd28b3957391427eb54de1c9eff7cfb1,wf_dd28b3957391427eb54de1c9e,orig_tbc_x_regular;" href="index.html">TBCxUSAID</a></li>
           		<li><a style="font-family:wfont_643d94_dd28b3957391427eb54de1c9eff7cfb1,wf_dd28b3957391427eb54de1c9e,orig_tbc_x_regular;" href="#">რისკები</a></li>
         	</ul>
       	</nav>
